--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -93,9 +93,15 @@
 				android:focusable="true" android:fitsSystemWindows="true" android:text="Aug,31 2001" android:textStyle="bold" android:textSize="16sp" android:keepScreenOn="true"/>
 			<EditText android:id="@+id/note"
 				android:layout_width="fill_parent"
-				android:layout_height="fill_parent"
+				android:layout_height="120px"
 				android:gravity="top"
 				android:layout_below="@+id/dateView"/>
+			<TextView android:id="@+id/space"
+				android:layout_below="@+id/note"
+				android:background="#123"
+				android:layout_height="0px"
+				android:layout_width="fill_parent"
+				/>
 			
 	</RelativeLayout>
 </RelativeLayout>
