--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/widget39"
+<RelativeLayout android:id="@+id/wrapper"
 	android:layout_width="fill_parent" android:layout_height="fill_parent"
 	xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -20,32 +20,40 @@
 	</RelativeLayout>
 	
 	<RelativeLayout android:id="@+id/unitChangeLayout"
-		android:paddingLeft="10px"
-		android:paddingRight="10px"
+		android:padding="10px"
 		android:layout_below="@+id/webViewLayout"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content" android:paddingBottom="0px" android:paddingTop="3px">
 		
-		<AbsoluteLayout android:layout_width="fill_parent"
-			android:layout_height="wrap_content">
+		<AbsoluteLayout android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_toRightOf="@+id/unitChangeLayout">
 			<EditText android:id="@+id/inputNum" 
-				android:layout_width="fill_parent" 
+				android:layout_width="160px" 
 				android:layout_height="40px" 
-				android:text=""
+				android:layout_x="140px"
+				android:layout_y="0px"
 				android:inputType="phone"/>
 			<Button android:id="@+id/unitChange"
 				android:layout_width="50px"
 				android:layout_height="36px"
 				android:text="Kg."
-				android:layout_x="245px"
-				android:layout_y="1px"
+				android:layout_x="250px"
+				android:layout_y="2px"
 				/>
 		</AbsoluteLayout>
+			<TextView android:id="@+id/dateView"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:layout_toLeftOf="@+id/unitChangeLayout"
+				android:paddingTop="5px"
+				android:paddingBottom="5px"
+				android:text="Aug,31 2001" 
+				android:textStyle="bold" 
+				android:textSize="16sp" />
 	</RelativeLayout>
 		<RelativeLayout android:id="@+id/dateLayout"
-			android:paddingLeft="10px"
-			android:paddingRight="10px"
-			android:paddingBottom="5px"
+			android:padding="10px"
 			android:layout_below="@+id/unitChangeLayout"
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content">
@@ -53,10 +61,7 @@
 			<AbsoluteLayout android:id="@+id/dateWrapper"
 				android:layout_width="fill_parent"
 				android:layout_height="wrap_content">
-				<TextView android:id="@+id/dateTitle" 
-					android:layout_width="fill_parent" 
-					android:layout_height="30px"
-					android:layout_below="@+id/dateLayout"/>
+				
 				<RelativeLayout android:id="@+id/dateButtonBar"
 					android:layout_height="wrap_content"
 					android:layout_width="fill_parent"
@@ -82,26 +87,12 @@
 					android:layout_height="32px"/>
 				</RelativeLayout>	
 			</AbsoluteLayout>
-			<TextView android:id="@+id/dateView"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:layout_below="@+id/dateWrapper"
-				android:paddingTop="5px"
-				android:paddingBottom="5px"
 
-				android:gravity="center_horizontal"
-				android:focusable="true" android:fitsSystemWindows="true" android:text="Aug,31 2001" android:textStyle="bold" android:textSize="16sp" android:keepScreenOn="true"/>
 			<EditText android:id="@+id/note"
 				android:layout_width="fill_parent"
 				android:layout_height="120px"
 				android:gravity="top"
-				android:layout_below="@+id/dateView"/>
-			<TextView android:id="@+id/space"
-				android:layout_below="@+id/note"
-				android:background="#123"
-				android:layout_height="0px"
-				android:layout_width="fill_parent"
-				/>
+				android:layout_below="@+id/dateWrapper"/>
 			
 	</RelativeLayout>
 </RelativeLayout>
